--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="images/panda-modified.png" alt="panda" style="width:200px;height:200px;">
       </td>
       <td>
-        <h1>Rodney Miguel Daza</h1>
+        <h1>Sai Aezeloth</h1>
         <!-- instead of using <i></i> for italic we will use <em></em>, and <b></b> to <strong></strong> -->
         <!-- https:// is important because to redirect them on website instead of your own folder -->
         <p>
@@ -55,7 +55,7 @@
     <tbody>
       <tr>
         <td>2010-2013</td>
-        <td>Lead Developer at Zenix Developers</td>
+        <td>Lead Developer at I Dont Know Developers</td>
       </tr>
       <tr>
         <td>2010</td>
